--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,5 +38,5 @@ steps:
     arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: true
 
-- task: PublishBuildArtifact@1
+- task: PublishBuildArtifacts@1
   displayName: 'publish artifacts'
