Adding Points, Items, Migrations to DB and Updating .Net Core Version

--- a/src/ecoletaApi/appsettings.json
+++ b/src/ecoletaApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionSqlite" : {
+    "SqliteConnectionString": "DataSource=Ecoleta.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
